main.css
/* Variables */

:root {
  --main-bg-color: #fbf9f9;
  --main-text-color: #4b4238;
  --main-accent-color: #b66033;
  --main-translucent-accent-color: rgba(182, 96, 51, 0.5);

  --secondary-bg-color: #ffffff;
  --secondary-text-color: #4b4238;
  --secondary-accent-color: #9ad1ca;

  --inverted-text-color: #ffffff;
  --link-color: #477670;

  --narrow-spacing: 5px;
  --normal-spacing: 10px;
  --wide-spacing: 15px;
}

/* General */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  height: 100%;
}

body {
  min-height: 100%;

  color: var(--main-text-color);
  background-color: var(--main-bg-color);

  font-family: "Lora", serif;
  font-size: 17px;

  padding-bottom: 20px;

  border: 10px solid var(--main-accent-color);
}

h1, h2, h3, h4, h5, h6 {
  font-family: "Raleway", sans-serif;
  font-weight: bold;
  color: var(--main-accent-color);
}

a {
  color: var(--link-color);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

em {
  font-weight: bold;
  font-style: italic;
}

i {
  font-style: italic;
}

u {
  text-decoration: underline;
}

ul.list {
  list-style-type: disc;
  list-style-position: outside;
  margin-left: 30px;
}

ul.list li {
  margin-bottom: var(--narrow-spacing);
}

ul.list li:last-child {
  margin-bottom: 0;
}

/* Better @ Symbol */

.at {
  font-family: "Lora", serif;
}

/* Sticky */

.sticky {
  position: fixed !important;
  top: 0;
}

/* Fancy Underline */
/* http://tobiasahlin.com/blog/css-trick-animating-link-underlines/ */

.fancy-underline {
  position: relative;
  text-decoration: none;
}

.fancy-underline:hover {
  text-decoration: none;
}

.fancy-underline:before {
  content: "";

  width: 100%;
  height: 1px;

  background-color: red; /* override per-location! */

  position: absolute;
  bottom: 0;
  left: 0;

  visibility: hidden;
  transform: scaleX(0);
  transition: all 0.2s cubic-bezier(0.20, 1, 0.20, 1) 0s;
}

.fancy-underline:before {
  background-color: var(--link-color);
}

.fancy-underline:hover:before {
  visibility: visible;
  transform: scaleX(1);
}

/* Main */

#main {
  max-width: 830px;
  margin: auto;
  position: relative;
}

/* Main Header */

#main-header {
  height: 600px;
  background-color: var(--secondary-accent-color);
  position: relative;
  margin-bottom: 20px;
}

/* Main Header - Main Circle */

@keyframes appear-from-top {
  0% {
    top: -410px;
  }
  100% {
    top: 100px;
  }
}

#main-circle {
  display: flex;
  flex-direction: column;
  justify-content: center;

  width: 400px;
  height: 400px;

  background-color: var(--main-translucent-accent-color);
  /* backdrop-filter: blur(10px); */

  text-align: center;

  border-radius: 50%;
  border: 1px solid var(--inverted-text-color);

  animation: 1.5s ease 0.5s forwards appear-from-top;
  position: absolute;
  top: -410px;
  left: 0;
  right: 0;
  margin: auto;
  z-index: 1;
}

#main-circle h1,
#main-circle p
{
  color: var(--inverted-text-color);
}

#main-circle h1 {
  font-size: 2.5em;
}

#main-circle p {
  font-style: italic;
  line-height: 1.5em;
}

/* Main Header - Voronoi */

@keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

#voronoi {
  position: absolute;
  top: 0;

  animation: 1.5s ease 0.5s forwards fade-in;
  opacity: 0;
}

/* Main Header - Blur */

#blur {
  width: 100%;
  height: 100px;

  /* TODO */
  background: linear-gradient(180deg, rgba(251,249,249,0) 0%, rgba(251,249,249,1) 99%);

  position: absolute;
  bottom: -1px;
  z-index: 1;
}

/* Main Header - Play/Pause */

#play-pause {
  width: 50px;
  height: 50px;

  color: var(--inverted-text-color);
  background-color: rgba(0, 0, 0, 0.1);

  font-family: "Raleway", sans-serif;
  font-size: 0.7em;
  font-weight: bold;
  text-align: center;
  line-height: 50px;

  border: 1px solid var(--inverted-text-color);
  border-radius: 50%;

  cursor: pointer;
  user-select: none;

  position: absolute;
  top: 10px;
  right: 10px;
  z-index: 1;

  animation: 1.5s ease 0.5s forwards fade-in;
  opacity: 0;
}

/* Info */

#info {
  width: 200px;
  padding-top: var(--wide-spacing);
  position: absolute;
}

#info img {
  width: 100%;
  margin-bottom: var(--narrow-spacing);
  border: 2px solid var(--secondary-accent-color);
  border-radius: 50%;
}

#info h2 {
  font-size: 1.6em;
  text-align: center;
  margin-bottom: calc(2 * var(--wide-spacing));
}

#info h2 a {
  color: inherit;
}

#info h2 .fancy-underline:before {
  background-color: var(--main-accent-color);
  color: var(--main-accent-color);
}

#info ul {
  margin-bottom: calc(2 * var(--wide-spacing));
}

#info li {
  margin-bottom: var(--wide-spacing);
}

#info li:last-child {
  margin-bottom: 0;
}

/* Info - Contact */

#contact .icon {
  font-size: 0.9em;
  margin-right: 10px;
}

/* Info - Nav */

#nav li a {
  color: var(--main-text-color);
}

#nav .fancy-underline:before {
  background-color: var(--main-text-color);
}

/* Content */

#content {
  margin-left: 280px;
}

#content * {
  line-height: 1.5em;
}

#content section {
  margin-top: var(--wide-spacing);
}

#content section > * {
  margin-bottom: var(--normal-spacing);
}

#content section > *:last-child {
  margin-bottom: 0;
}

#content h2 {
  font-size: 1.6em;
  text-align: center;

  border-top: 1px solid var(--main-accent-color);
  border-bottom: 1px solid var(--main-accent-color);
  border-radius: 5px;
}

#content h3 {
  font-size: 1.3em;
}

#content h4 {
  color: var(--main-text-color);
  font-size: 1.1em;
}

#content ul.entries li {
  margin: var(--wide-spacing) 0;
}

#content ul.entries li p {
  margin-top: var(--narrow-spacing);
}

/* Projects */

#projects > div {
  margin-top: var(--wide-spacing);
}

#projects img {
  height: 100px;
  border: 2px solid var(--secondary-accent-color);
  border-radius: 50%;
  float: left;
}

#projects img + div {
  margin-left: 120px;
}

/* News */

#newsfeed > div {
  margin-top: var(--wide-spacing);
}

#newsfeed time {
  display: inline-block;

  width: 100px;

  text-align: right;
  font-style: italic;

  float: left;
}

#newsfeed time + div {
  margin-left: 120px;
}

/* Media Queries */

/* margin + main-width + margin
 *   where margin = column separation distance
 */
@media(max-width: 990px) {
  /* Sticky */

  .sticky {
    position: static !important;
  }

  /* Main */

  #main {
    max-width: 800px;
  }

  /* Info */

  #info {
    width: 100%;
    padding: 0 30px;
    position: relative;
  }

  #info > div {
    height: 150px;
    display: flex;
    flex-direction: column;
    justify-content: center;
  }

  #info img {
    width: 150px;
    float: left;
    margin-right: 30px;
    margin-bottom: 0;
  }

  #info h2 {
    text-align: left;
    margin-bottom: var(--wide-spacing);
  }

  #info ul {
    margin-bottom: 0;
  }

  /* Info - Nav */

  #nav {
    margin-top: var(--normal-spacing);
    text-align: center;
    border-radius: 5px;
    border-top: 1px solid var(--main-text-color);
    border-bottom: 1px solid var(--main-text-color);
    line-height: 2em;
  }

  #nav li {
    margin-bottom: 0;
    margin-right: 10px;
    display: inline-block;
  }

  #nav li a {
    color: var(--link-color);
  }

  #nav .fancy-underline:before {
    background-color: var(--link-color);
  }

  /* Content */

  #content {
    margin-left: 0;
    padding: 0 30px;
  }
}

